maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:5: error: illegal start of statement
    match random {
    ^