maze.randommouse.RandomMouseMaze.scala.code
override def run() {
  var random:Int = random3();
  while (!isOverBaggle) {
    match random {
      case 0 => if (isFacingWall) {
        forward();
      }
      case 1 => right();
      case 2 => left();
    }
  }
  random = random3();
}